--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@ body {
 </p>
 <p>
 
-<a name="Intraduction"></a>
-<br/><a href="#Intraduction">Intraduction </a>
+<br/><a href="#intrudaction">intrudaction </a>intrudaction
 <br/><a href="#My Occupation">My Occupation </a>
 <br/><a href="#My Hobbies">My Hobbies</a>
 <br/><a href="#Contact Me....">Contact Me....</a>
 </p>
-
-	<h2 class="text-shadow">Intraduction</h2>
+<a name="Intraduction"></a>
+	<h2 class="text-shadow">intrudaction</h2>
 	Hi, this is me ....
 	
 	<p>
