--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 </p>
 <p>
 
-<br/><a href="#intrudaction">intrudaction </a>intrudaction
+<br/><a href="#intrudaction">intrudaction </a>
 <br/><a href="#My Occupation">My Occupation </a>
 <br/><a href="#My Hobbies">My Hobbies</a>
 <br/><a href="#Contact Me....">Contact Me....</a>
