--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Yuval Haddy </title>
+	<link rel ="shortcut icon" type="images/png" href="images/favicon.png">
 	<link rel="stylesheet" href="styles.css">
 	<style>
 body {
@@ -30,10 +31,9 @@ body {
 </p>
 <p>
 
-<br/><a href="#intrudaction">intrudaction </a>
-<br/><a href="#My Occupation">My Occupation </a>
-<br/><a href="#My Hobbies">My Hobbies</a>
-<br/><a href="#Contact Me....">Contact Me....</a>
+<br/> intrudaction | <a href="#My Occupation">My Occupation </a> |<a href="#My Hobbies">My Hobbies</a>|<a href="#Contact Me....">Contact Me....</a>
+<hr>
+
 </p>
 <a name="intrudaction"></a>
 	<h2 class="text-shadow">intrudaction</h2>
@@ -44,13 +44,17 @@ body {
 	<img src="images/yuval.PNG"/>
 	</p>
 	<br/>
-	<p>My name is Yuval. I'm married with 2 girls and i am from Rishon Lezion   </p>
-	
+	<p>Helloo everyone my name is Yuval. I'm married with 2 lovely girls and i am from Rishon Lezion </p>
+	<br/>
+	<hr>
+	<br/><a href="#intrudaction">intrudaction </a>  | My Occupation |<a href="#My Hobbies">My Hobbies</a>|<a href="#Contact Me....">Contact Me....</a>
+    <hr>
 	<a name="My Occupation"></a>
 	<h2 class="text-shadow">My Occupation</h2>
 	<p>
 	I am a QA engineer for the last 10 years. 
-	<br/>I really love and enjoy what I am doing there for  I decided to learn QA Automation
+	<br/>I love to explore things, get down to the details
+	<br/>I really love and enjoy what I am doing there for I decided to learn QA Automation
 	<br/>I believe that when you love something you do it the best.
     <br/>
 	<ul><b>My Technical Skills:</b></ul>
@@ -61,6 +65,13 @@ body {
 	<br/>Working with Postman tools in API services to check information transfer.
     <br> Experience with Web testing.
    	</p>
+	<br/>
+	<img src="images/‏‏QA.PNG"/> <iframe width="560" height="315" src="https://www.youtube.com/embed/feX95rDXVkI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>     <img src="images/‏‏ROLE1.PNG"/>
+	<br/>
+	<br/>
+	<hr>
+	<br/><a href="#intrudaction">intrudaction </a>  | <a href="#My Occupation">My Occupation </a> | My Hobbies |<a href="#Contact Me....">Contact Me....</a>
+    <hr>
 	<a name="My Hobbies"></a>
 	<h2 class="text-shadow">My Hobbies</h2>
 	<p>
@@ -78,6 +89,11 @@ body {
 	<p>
 	<img src="images/‏‏miryam.PNG"/> <img src="images/‏‏picture3.PNG"/> <img src="images/‏‏picture.PNG"/> <img src="images/‏‏picture2.PNG"/>
 	</p>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/xgRF5MV-fHo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<p>
+	
+	</p>
+	
 	<a href="https://www.k-shoa.org/?gclid=CjwKCAjw9uKIBhA8EiwAYPUS3Maa9mIs63nZEwiMvXAbhy0KuhYPbhSsZxV1Tn0eOS4myGWZNweUPhoCvwAQAvD_BwE "target="blank">The Holocaust Welfare Fund</a>
 	<p>
 	<ul><b>Running</b></ul>
@@ -91,6 +107,10 @@ body {
 	</p> 
 	<img src="images/‏‏medal.PNG"/>       <img src="images/‏‏medal2.PNG"/>
 	<p>
+	<br/>
+	<hr>
+	<br/><a href="#intrudaction">intrudaction </a>  | <a href="#My Occupation">My Occupation </a> |<a href="#My Hobbies">My Hobbies</a>| Contact Me....
+    <hr>
 	<a name="Contact Me...."></a>
 	<h2 class="text-shadow"><br/>Contact Me....</h2>
 	<a href="https://www.linkedin.com/in/yuval-haddy/"target ="blank">My Linkedin </a>
